seperate css files added

--- a/styling/signup.css
+++ b/styling/signup.css
@@ -12,12 +12,16 @@
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
   .form-signup input[type="password"] {
     
     margin-bottom: -1px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
   }
   .form-signup input[name="username"]{
     margin-bottom: -1px;
@@ -29,4 +33,5 @@
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    
   }
